<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="back">Back</string>
    <string name="insert_image">Insert Image</string>
    <string name="hint_reason">Why do you feel this way?</string>
    <string name="hint_explanation">Explain your mood...</string>
    <string name="share_location">Share location with others</string>
    <string name="submit">Submit</string>
    <string name="permission_denied">Storage permission required to select images</string>

    <string-array name="mood_array">
        <item>😡</item>
        <item>😕</item>
        <item>🤮</item>
        <item>😱</item>
        <item>😄</item>
        <item>😭</item>
        <item>😞</item>
        <item>😳</item>
        <item>💀</item>
    </string-array>


    <string-array name="social_situation_array">
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>
</resources>
