<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Back Arrow Button in the top-left corner -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/back_button"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <!-- Row for Mood Spinner and Insert Image Button -->

    <Spinner
        android:id="@+id/spinnerMood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:layout_marginTop="56dp"
        android:entries="@array/mood_array"
        app:layout_constraintEnd_toStartOf="@id/btnInsertImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        />

    <ImageButton
        android:id="@+id/btnInsertImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/insert_image"
        app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/checkboxShareLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_location"
        app:layout_constraintTop_toBottomOf="@id/btnInsertImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"/>


    <!-- Reason: Short Text Field -->

    <!-- Explanation: Long Text Field -->

    <!-- Social Situation Dropdown -->

    <!-- Share Location With Others Checkbox -->

    <!-- Submit Button at the bottom -->

    <EditText
        android:id="@+id/etReason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="236dp"
        android:hint="@string/hint_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerMood" />

    <EditText
        android:id="@+id/etExplanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="188dp"
        android:gravity="top"
        android:hint="@string/hint_explanation"
        android:minLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etReason" />

    <Spinner
        android:id="@+id/spinnerSocialSituation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="72dp"
        android:entries="@array/social_situation_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etExplanation" />



    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
